--- a/notebook/generate_names.ipynb
+++ b/notebook/generate_names.ipynb
@@ -47,9 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading and preprocessing data...\n",
+      "First 10 names: ['-luis.', '-maria carmen.', '-antonio.', '-maria.', '-manuel.']\n"
+     ]
+    }
+   ],
    "source": [
     "data_filepath = \"../data/nombres_raw.txt\"  # Replace with your actual file path\n",
     "alphabet = \"abcdefghijklmnopqrstuvwxyz \"\n",
@@ -65,9 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encoding names...\n",
+      "First 10 encoded names: [[1, 15, 24, 12, 22, 2], [1, 16, 4, 21, 12, 4, 3, 6, 4, 21, 16, 8, 17, 2], [1, 4, 17, 23, 18, 17, 12, 18, 2], [1, 16, 4, 21, 12, 4, 2], [1, 16, 4, 17, 24, 8, 15, 2]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize tokenizer\n",
     "tokenizer = CharTokenizer(alphabet, start_token=start_token, end_token=end_token)\n",
@@ -83,16 +101,26 @@
    "metadata": {},
    "source": [
     "- Use the ```CharTokenizer``` to encode your name. What is the result of encoding your name?\n",
-    ">>> Write your name\n",
+    ">>> Luis\n",
     "\n",
-    ">>> Write your name encoded"
+    ">>> [1, 15, 24, 12, 22, 2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First item in batch:\n",
+      "Input: tensor([ 1, 14, 12, 21, 12, 15, 15,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0])\n",
+      "Target: tensor([14, 12, 21, 12, 15, 15,  2,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0])\n"
+     ]
+    }
+   ],
    "source": [
     "# Create dataset\n",
     "dataset = NameDataset(encoded_names)\n",
@@ -114,10 +142,10 @@
    "metadata": {},
    "source": [
     "- How can you obtain the target tensor from the input? Does this make sense for an autorregressive prediction such as the one of the Decoder-only model?\n",
-    ">>> Write your answer here\n",
+    ">>> El target se obtiene desplazando el input una posición hacia la izquierda, y añadiendo el end token al final\n",
     "\n",
     "- What is the tensor value for the start token? And for the end token? And for the padding token?\n",
-    ">>> Write your answer here"
+    ">>> Start token: 1; End token: 2; Padding token: 0"
    ]
   },
   {
@@ -130,9 +158,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/luisg/IMAT/NLPII/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "The cache for model files in Transformers v4.22.0 has been updated. Migrating your old cache. This is a one-time only operation. You can interrupt this and resume the migration later on by calling `transformers.utils.move_cache()`.\n",
+      "0it [00:00, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting training...\n",
+      "Epoch [1/10], Training Loss: 2.3731\n",
+      "Epoch [1/10], Validation Loss: 2.1536\n",
+      "Epoch [2/10], Training Loss: 2.0603\n",
+      "Epoch [2/10], Validation Loss: 1.9928\n",
+      "Epoch [3/10], Training Loss: 1.9123\n",
+      "Epoch [3/10], Validation Loss: 1.8639\n",
+      "Epoch [4/10], Training Loss: 1.7962\n",
+      "Epoch [4/10], Validation Loss: 1.7694\n",
+      "Epoch [5/10], Training Loss: 1.7092\n",
+      "Epoch [5/10], Validation Loss: 1.6906\n",
+      "Epoch [6/10], Training Loss: 1.6429\n",
+      "Epoch [6/10], Validation Loss: 1.6348\n",
+      "Epoch [7/10], Training Loss: 1.5903\n",
+      "Epoch [7/10], Validation Loss: 1.5911\n",
+      "Epoch [8/10], Training Loss: 1.5480\n",
+      "Epoch [8/10], Validation Loss: 1.5526\n",
+      "Epoch [9/10], Training Loss: 1.5135\n",
+      "Epoch [9/10], Validation Loss: 1.5288\n",
+      "Epoch [10/10], Training Loss: 1.4848\n",
+      "Epoch [10/10], Validation Loss: 1.4978\n"
+     ]
+    }
+   ],
    "source": [
     "# Define training hyper parameters\n",
     "model_save_dir = \"runs\"\n",
@@ -183,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,41 +291,41 @@
     "    end_token_id = tokenizer.char2idx[end_token]\n",
     "\n",
     "    # TODO: Encode the prefix\n",
-    "    prefix_ids = None\n",
+    "    prefix_ids = [tokenizer.char2idx[c] for c in prefix if c in tokenizer.char2idx]\n",
     "\n",
     "    # TODO: Initialize the input with the start token and the prefix\n",
-    "    generated_ids = None\n",
+    "    generated_ids = [start_token_id] + prefix_ids\n",
     "\n",
     "    with torch.no_grad():\n",
     "        for _ in range(max_length):\n",
     "            # TODO: Get model predictions\n",
-    "            logits = None\n",
+    "            logits = model(torch.tensor(generated_ids, device=device).unsqueeze(0))\n",
     "            \n",
     "            # TODO: Apply softmax to get probabilities\n",
-    "            next_token_probs = None\n",
+    "            next_token_probs = F.softmax(logits[:, -1, :], dim=-1)\n",
     "\n",
     "            # TODO: Sample the next token\n",
-    "            next_token_id = None\n",
+    "            next_token_id = torch.multinomial(next_token_probs, num_samples=1)\n",
     "\n",
     "            # TODO: Append the new token to the sequence\n",
-    "            generated_ids = None\n",
+    "            generated_ids.append(next_token_id.item())\n",
     "\n",
     "            # Stop if end token is generated\n",
     "            if next_token_id.item() == end_token_id:\n",
     "                break\n",
     "\n",
     "    # TODO: Decode the generated token IDs to a string, excluding start and end tokens\n",
-    "    generated_sequence = None\n",
+    "    generated_sequence = [tokenizer.idx2char[i] for i in generated_ids[1:-1]]\n",
     "\n",
     "    # TODO: Decode the name\n",
-    "    generated_name = None\n",
+    "    generated_name = \"\".join(generated_sequence)\n",
     "\n",
     "    return generated_name\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,9 +339,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Names:\n",
+      "\n",
+      "keltina\n",
+      "luis dadiel\n",
+      "samuel catalina\n",
+      "wostagha\n",
+      "sergio david\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate names\n",
     "print(\"Generated Names:\\n\")\n",
@@ -355,9 +442,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Names with temperature=1.5:\n",
+      "\n",
+      "eluly\n",
+      "maria sabrito maya\n",
+      "ioan frlene\n",
+      "ruben tagisel\n",
+      "rosa iuge\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 1.5  # High randomness\n",
     "print(f\"Generated Names with temperature={temperature}:\\n\")\n",
@@ -376,9 +477,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Names with temperature=0.75:\n",
+      "\n",
+      "matias patricia\n",
+      "alika\n",
+      "marcos\n",
+      "ricolardo joe\n",
+      "alfonso fernando\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 0.75  # Low randomness\n",
     "print(f\"Generated Names with temperature={temperature}:\\n\")\n",
@@ -397,9 +512,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'<unk>'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m prefix = \u001b[33m\"\u001b[39m\u001b[33mZ\u001b[39m\u001b[33m\"\u001b[39m  \u001b[38;5;66;03m# Prefix to start the names with\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_names):\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     name = \u001b[43mgenerate_name\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m        \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m        \u001b[49m\u001b[43mprefix\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprefix\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m        \u001b[49m\u001b[43mstart_token\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstart_token\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m        \u001b[49m\u001b[43mend_token\u001b[49m\u001b[43m=\u001b[49m\u001b[43mend_token\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m        \u001b[49m\u001b[43mmax_length\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmax_length\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtemperature\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdevice\u001b[49m\n\u001b[32m     13\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m     \u001b[38;5;28mprint\u001b[39m(name)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 32\u001b[39m, in \u001b[36mgenerate_name\u001b[39m\u001b[34m(model, tokenizer, prefix, start_token, end_token, max_length, temperature, device)\u001b[39m\n\u001b[32m     29\u001b[39m end_token_id = tokenizer.char2idx[end_token]\n\u001b[32m     31\u001b[39m \u001b[38;5;66;03m# TODO: Encode the prefix\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m32\u001b[39m prefix_ids = [tokenizer.char2idx.get(c, \u001b[43mtokenizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mchar2idx\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m<unk>\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m prefix]\n\u001b[32m     34\u001b[39m \u001b[38;5;66;03m# TODO: Initialize the input with the start token and the prefix\u001b[39;00m\n\u001b[32m     35\u001b[39m generated_ids = [start_token_id] + prefix_ids\n",
+      "\u001b[31mKeyError\u001b[39m: '<unk>'"
+     ]
+    }
+   ],
    "source": [
     "temperature = 1.0  # Default randomness\n",
     "prefix = \"Z\"  # Prefix to start the names with\n",
@@ -416,11 +544,25 @@
     "    )\n",
     "    print(name)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NLP_attention",
+   "display_name": "NLPII",
    "language": "python",
    "name": "python3"
   },
@@ -434,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
