--- a/notebook/generate_names.ipynb
+++ b/notebook/generate_names.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -348,11 +348,11 @@
      "text": [
       "Generated Names:\n",
       "\n",
-      "keltina\n",
-      "luis dadiel\n",
-      "samuel catalina\n",
-      "wostagha\n",
-      "sergio david\n"
+      "valerio alid\n",
+      "caludia rose\n",
+      "teresa ramon\n",
+      "zilagraza santia\n",
+      "dlona ancolina\n"
      ]
     }
    ],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -451,11 +451,11 @@
      "text": [
       "Generated Names with temperature=1.5:\n",
       "\n",
-      "eluly\n",
-      "maria sabrito maya\n",
-      "ioan frlene\n",
-      "ruben tagisel\n",
-      "rosa iuge\n"
+      "josefa clorestino\n",
+      "asunderi\n",
+      "marcos difaela\n",
+      "sansongo\n",
+      "hilia maria\n"
      ]
     }
    ],
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -486,11 +486,11 @@
      "text": [
       "Generated Names with temperature=0.75:\n",
       "\n",
-      "matias patricia\n",
-      "alika\n",
-      "marcos\n",
-      "ricolardo joe\n",
-      "alfonso fernando\n"
+      "pearne\n",
+      "claudia\n",
+      "yeni\n",
+      "hoiaika crmen\n",
+      "livianu\n"
      ]
     }
    ],
@@ -512,19 +512,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'<unk>'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m prefix = \u001b[33m\"\u001b[39m\u001b[33mZ\u001b[39m\u001b[33m\"\u001b[39m  \u001b[38;5;66;03m# Prefix to start the names with\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_names):\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     name = \u001b[43mgenerate_name\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m        \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m        \u001b[49m\u001b[43mprefix\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprefix\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m        \u001b[49m\u001b[43mstart_token\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstart_token\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m        \u001b[49m\u001b[43mend_token\u001b[49m\u001b[43m=\u001b[49m\u001b[43mend_token\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m        \u001b[49m\u001b[43mmax_length\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmax_length\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtemperature\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdevice\u001b[49m\n\u001b[32m     13\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m     \u001b[38;5;28mprint\u001b[39m(name)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 32\u001b[39m, in \u001b[36mgenerate_name\u001b[39m\u001b[34m(model, tokenizer, prefix, start_token, end_token, max_length, temperature, device)\u001b[39m\n\u001b[32m     29\u001b[39m end_token_id = tokenizer.char2idx[end_token]\n\u001b[32m     31\u001b[39m \u001b[38;5;66;03m# TODO: Encode the prefix\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m32\u001b[39m prefix_ids = [tokenizer.char2idx.get(c, \u001b[43mtokenizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mchar2idx\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m<unk>\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m prefix]\n\u001b[32m     34\u001b[39m \u001b[38;5;66;03m# TODO: Initialize the input with the start token and the prefix\u001b[39;00m\n\u001b[32m     35\u001b[39m generated_ids = [start_token_id] + prefix_ids\n",
-      "\u001b[31mKeyError\u001b[39m: '<unk>'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zahixer\n",
+      "zeraii\n",
+      "kesthem renes\n",
+      "oslioba\n",
+      "ikana marcaro\n"
      ]
     }
    ],
